<resources>
    <string name="app_name">Share</string>
    <string name="hotspot_running">Running Hotspot</string>
    <string name="hotspot_start">Starting hotspot</string>
    <string name="stop">Stop</string>
    <string name="hotspot_settings_dialog">Enable portable hotspot from the settings.</string>
    <string name="hotspot_name_suffix">-odk-share</string>
    <string name="hotspot_name_prefix_oreo">AndroidShare</string>
    <string name="hotspot_already_running">Hotspot already running</string>
    <string name="scan_alert_oreo">Scan QR Code to connect to this network</string>

    <string name="saved_forms">Saved Forms</string>
    <string name="send_selected">Send</string>
    <string name="select_all">Select all</string>
    <string name="clear_all">Clear all</string>
    <string name="send_forms">Send</string>
    <string name="version">Version: %1$s</string>
    <string name="id">ID: %1s</string>

    <string name="connect_wifi">Connect to wifi</string>
    <string name="receive_forms">Receive</string>
    <string name="enable_wifi">Enable Wifi to start scan</string>
    <string name="no_wifi_available">No wifi available. Scan again !</string>
    <string name="scanning">Scanning. Please wait</string>
    <string name="scan">Scan wifi</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="show_password">Show Password</string>
    <string name="connect">Connect</string>
    <string name="already_connected">Already connected to</string>
    <string name="cancel">Cancel</string>
    <string name="password_empty">Password field is empty</string>
    <string name="port_empty">Port cannot be empty</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="default_hotspot_ssid">hotspot</string>
    <string name="default_hotspot_password">12345678</string>
    <string name="title_hotspot_ssid">Hotspot SSID</string>
    <string name="title_hotspot_password">Set Hotspot password</string>
    <string name="set_password">Set Password</string>
    <string name="password_hotspot">Password required to connect with hotspot</string>
    <string name="hotspot_name_error">Hotspot name should not be empty</string>
    <string name="hotspot_password_error">Password length should be atleast 8 characters long</string>
    <string name="waiting_connection">Waiting for connection to accept</string>
    <string name="waiting_hotspot">Waiting for hotspot to connect</string>
    <string name="connection_issue_hotspot">Problem in enabling hotspot. Try again</string>
    <string name="connection_info">For connection, scan this QR code or type %1$s after connecting to WiFi %2$s</string>
    <string name="connecting_wifi">Connecting to wifi</string>
    <string name="ok">OK</string>
    <string name="canceled">Canceled</string>
    <string name="stop_sending">Stop Sending</string>


    <string name="sending_items">Sending %1$s of %2$s form(s)</string>
    <string name="receiving_items">Receiving %1$s of %2$s form(s)</string>
    <string name="transfer_result">Transfer result</string>
    <string name="error_while_downloading">Error occurred while downloading form: %1$s</string>
    <string name="error_while_uploading">Error occurred while uploading form: %1$s</string>
    <string name="download_queued">Downloading queued…</string>
    <string name="upload_queued">Uploading queued…</string>

    <string name="cannot_create_directory">Cannot create directory: %s</string>
    <string name="not_a_directory">%s exists, but is not a directory</string>
    <string name="sdcard_unmounted">Collect cannot access the SD card. Perhaps it is mounted via USB? (Current state: %s)</string>

    <string name="statistics">Statistics</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="reviewed">Reviewed</string>
    <string name="no_forms_sent">No filled %s forms sent</string>
    <string name="no_forms_received">No filled %s forms received</string>
    <string name="no_forms_reviewed">No finalized %s forms reviewed</string>
    <string name="sort_list">Sort the list</string>
    <string name="search_list">Search the list</string>
    <string name="search">Search</string>

    <string name="sort_by_name_asc">Name, A-Z</string>
    <string name="sort_by_name_desc">Name, Z-A</string>
    <string name="sort_by_date_asc">Date, newest first</string>
    <string name="sort_by_date_desc">Date, oldest first</string>
    <string name="sort_by">Sort by</string>
    <string name="num_forms_sent">Number of forms sent</string>
    <string name="num_forms_received">Number of forms received</string>
    <string name="num_forms_reviewed">Number of forms reviewed</string>
    <string name="approve">Approve</string>
    <string name="Reject">Reject</string>
    <string name="review_later">Review Later</string>
    <string name="add_feedback">Add Feeback</string>
    <string name="view_form_in_collect">View in ODK Collect</string>
    <string name="collect_not_installed">Install ODK Collect to view the form</string>
    <string name="install_collect">Share app requires ODK Collect to be installed in the device</string>
    <string name="install">Install</string>
    <string name="no_blank_forms">No blank forms available</string>
    <string name="form_approved">Form approved</string>
    <string name="form_rejected">Form rejected</string>
    <string name="approved_on">Approved on %s</string>
    <string name="rejected_on">Rejected on %s</string>
    <string name="received_on">Unreviewed, Received on %s</string>
    <string name="sent_on">Sent on %s</string>
    <string name="date_at_time">EEE, MMM dd, yyyy \'at\' HH:mm</string> <!-- http://docs.oracle.com/javase/6/docs/api/java/text/SimpleDateFormat.html -->

    <string name="blank_form_count">(Blank form %s)</string>
    <string name="success">-Success %s\n</string>
    <string name="failed">-Failed %s\n</string>
    <string name="review_not_asked">(Review not asked by the receiver)</string>
    <string name="not_sent_for_review">(Form not sent for review)</string>
    <string name="review_sent">(Review sent)</string>
    <string name="review_received">(Review received)</string>
    <string name="sent_for_review">(Sent for review)</string>
    <string name="received_for_review">(Received for review)</string>
    <string name="updated">(Updated)</string>
    <string name="sent_again">(Sent again)</string>
    <string name="form_received_by_reviewer">%s by reviewer</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="feedback_sent">\nFeedback sent by reviewer: %s</string>
    <string name="no_feedback_sent">\nNo feedback sent by the reviewer</string>
    <string-array name="stats_field">
        <item name="sent">Sent</item>
        <item name="received">Received</item>
        <item name="reviewed">Reviewed</item>
    </string-array>
    <string name="filled_form">Filled forms</string>
    <string name="blank_form">Blank Forms</string>
    <string name="num_reviewed">Reviewed: %s</string>
    <string name="num_unreviewed">Unreviewed: %s</string>
</resources>
